force-app/main/default/objects/VISousDomaine__c/VISousDomaine__c.object-meta.xml
<CustomObject>
    <label>Produit - SousDomaine</label>
    <nameField>
        <label>SousDomaine</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produits - SousDomaines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>