force-app/main/default/objects/VISousDomaine__c/fields/Code_API_Sous_domaine__c.field-meta.xml
<CustomField>
    <fullName>Code_API_Sous_domaine__c</fullName>
    <label>Code API - Sous domaine</label>
    <length>3</length>
    <type>Text</type>
</CustomField>