force-app/main/default/objects/VISousDomaine__c/fields/Code_BU__c.field-meta.xml
<CustomField>
    <fullName>Code_BU__c</fullName>
    <formula>text( libelle_BU__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code BU</label>
    <type>Text</type>
</CustomField>