force-app/main/default/objects/VISousDomaine__c/fields/Code_Domaine__c.field-meta.xml
<CustomField>
    <fullName>Code_Domaine__c</fullName>
    <formula>Text( Libelle_Domaine__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Domaine</label>
    <type>Text</type>
</CustomField>