force-app/main/default/objects/VISousDomaine__c/fields/Code_fiche_affaire__c.field-meta.xml
<CustomField>
    <fullName>Code_fiche_affaire__c</fullName>
    <label>Code fiche affaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Clients -vision cumulée</fullName>
            </value>
            <value>
                <fullName>2 FGX-Vision annuelle</fullName>
            </value>
            <value>
                <fullName>3 Autres- vision cumulée</fullName>
            </value>
            <value>
                <fullName>z2</fullName>
                <isActive>false</isActive>
                <label>z2</label>
            </value>
            <value>
                <fullName>z3</fullName>
                <isActive>false</isActive>
                <label>z3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>