force-app/main/default/objects/VISousDomaine__c/fields/Code_sous_domaine__c.field-meta.xml
<CustomField>
    <fullName>Code_sous_domaine__c</fullName>
    <label>Code sous-domaine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>