force-app/main/default/objects/VISousDomaine__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <label>Compte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>