force-app/main/default/objects/VISousDomaine__c/fields/Duree_garantie__c.field-meta.xml
<CustomField>
    <fullName>Duree_garantie__c</fullName>
    <label>Durée garantie</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>