force-app/main/default/objects/VISousDomaine__c/fields/FGX__c.field-meta.xml
<CustomField>
    <fullName>FGX__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Faut il calculer des FGX / PRI ?</inlineHelpText>
    <label>FGX</label>
    <type>Checkbox</type>
</CustomField>