force-app/main/default/objects/VISousDomaine__c/fields/K3__c.field-meta.xml
<CustomField>
    <fullName>K3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Faut il calculer du K3 / Complet pour ce produit ?</inlineHelpText>
    <label>K3</label>
    <type>Checkbox</type>
</CustomField>