force-app/main/default/objects/VISousDomaine__c/fields/libelle_BU__c.field-meta.xml
<CustomField>
    <fullName>libelle_BU__c</fullName>
    <label>Libellé BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BU</valueSetName>
    </valueSet>
</CustomField>