force-app/main/default/objects/VISousDomaine__c/fields/Libelle_Domaine__c.field-meta.xml
<CustomField>
    <fullName>Libelle_Domaine__c</fullName>
    <label>Libellé Domaine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DOMAINE</valueSetName>
    </valueSet>
</CustomField>