force-app/main/default/objects/VISousDomaine__c/fields/Libelle_sous_domaine__c.field-meta.xml
<CustomField>
    <fullName>Libelle_sous_domaine__c</fullName>
    <label>Libellé sous-domaine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>