force-app/main/default/objects/VISousDomaine__c/fields/Mode_de_calcul_de_l_avancement__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_calcul_de_l_avancement__c</fullName>
    <label>Mode de calcul de l&apos;avancement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_de_calcul_de_l_avancement</valueSetName>
    </valueSet>
</CustomField>