force-app/main/default/objects/VISousDomaine__c/fields/RAD__c.field-meta.xml
<CustomField>
    <fullName>RAD__c</fullName>
    <label>RAD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>