force-app/main/default/objects/VISousDomaine__c/fields/Type_d_imputation__c.field-meta.xml
<CustomField>
    <fullName>Type_d_imputation__c</fullName>
    <label>Type d&apos;imputation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_d_imputation</valueSetName>
    </valueSet>
</CustomField>