force-app/main/default/objects/VISousDomaine__c/fields/Type_d_imputation_Libelle__c.field-meta.xml
<CustomField>
    <fullName>Type_d_imputation_Libelle__c</fullName>
    <formula>CASE( Type_d_imputation__c , 
    &apos;1&apos;, &apos;Recherche &amp; Développement&apos;, 
    &apos;2&apos;, &apos;Sinistres&apos;,
    &apos;3&apos;, &apos;Projets&apos;,
    &apos;4&apos;, &apos;Clients&apos;,
    &apos;5&apos;, &apos;Cinq&apos;,
    &apos;6&apos;, &apos;Six&apos;,
    &apos;7&apos;, &apos;Investissements&apos;,
    &apos;8&apos;, &apos;Stocks&apos;,
    &apos;9&apos;, &apos;Frais Généraux&apos;,
   &apos;inconnu&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;imputation - Libellé</label>
    <type>Text</type>
</CustomField>