force-app/main/default/objects/VISousDomaine__c/fields/use_cutomer_segment__c.field-meta.xml
<CustomField>
    <fullName>use_cutomer_segment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inclure dans la segmentation client</label>
    <type>Checkbox</type>
</CustomField>